@@ -1,5 +1,8 @@
 2004-05-29  Dominique Devriese  <devriese@kde.org>
 
+	* Fix a crash related to a locus containing some invalid points,
+	and added the offending test file in filters/tests.
+
 	* Fix some --enable-final problems in the filters/ directory.
 
 2004-05-28  Dominique Devriese  <devriese@kde.org>
